tests/rosetta/out/Zig/9-billion-names-of-god-the-integer.error
zig build: exit status 1
/tmp/9-billion-names-of-god-the-integer.zig:24:15: error: function parameter shadows declaration of 'x'
/tmp/9-billion-names-of-god-the-integer.zig:13:1: note: declared here
/tmp/9-billion-names-of-god-the-integer.zig:63:19: error: local constant 'res' shadows local variable from outer scope
/tmp/9-billion-names-of-god-the-integer.zig:45:9: note: previous declaration here
/tmp/9-billion-names-of-god-the-integer.zig:94:19: error: local constant 'res' shadows local variable from outer scope
/tmp/9-billion-names-of-god-the-integer.zig:73:9: note: previous declaration here
/tmp/9-billion-names-of-god-the-integer.zig:124:13: error: local variable shadows declaration of 'row'
/tmp/9-billion-names-of-god-the-integer.zig:151:1: note: declared here
